# hoyo-daily

./: .pre-commit-config.yaml  README.md  daily.py  main.py  pyproject.toml  redeem.py  requirements-dev.txt  requirements.txt  utils.py
.github/: dependabot.yml
.github/workflows/: ci.yml  daily.yml  redeem.yml
used/: genshin.txt  starrail.txt
